<resources>
    <string name="app_name">PARKEASE APP</string>
    <string name="todo">TODO</string>
    <string name="parking_owner">Parking Owner</string>
    <string name="user">User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone no</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="address">Address</string>
    <string name="otp">OTP</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="submit">Submit</string>
    <string name="user_registration">User Registration</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="my_api_key">AIzaSyDpLsXHtjmlyZu2lplDG3CHFKsxh18JK4g</string>


</resources>