<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivityownerReg">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/customer_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="259dp">

            <TextView
                android:id="@+id/RegistrationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Owner Registration"
                android:textAlignment="center"
                android:textColor="#9575CD"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="179dp" />


            <EditText
                android:id="@+id/name"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/Emailid"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/phoneno"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/phone_no"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextFields,TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/confrimpassword"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/confrim_password"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextFields,TextContrastCheck" />

            <EditText
                android:id="@+id/address"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />



            <EditText
                android:id="@+id/vehicleno"
                android:layout_width="294dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/customer_edittext"

                android:drawablePadding="8dp"
                android:hint="Address of parking lot"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"

                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/adharText"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="Aadhar Card "
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="179dp" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="Upload File"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="165dp"
                android:layout_height="match_parent"

                android:layout_gravity="right"

                android:backgroundTint="@color/purple"
                android:text="@string/submit"
                android:textColor="#4E342E"
                android:textSize="15sp"
                app:cornerRadius="15dp"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>